<resources>
    <string name="app_name">Meet-Kotlin</string>
    <string name="text_splash">相遇总是美好的</string>

    <string name="text_guide_pager_1">每个人，都是一颗孤独的星球</string>
    <string name="text_guide_pager_2">我们在黑夜中寻找光明</string>
    <string name="text_guide_pager_3">如果遇见，请面带微笑</string>
    <string name="text_skip">跳过</string>
    <string name="text_mobile_phone">电话号码</string>
    <string name="text_auth_code">验证码</string>
    <string name="text_send">发送</string>
    <string name="text_login">登录</string>
    <string name="text_pic_auth_fail">图片验证失败，请重试！</string>
    <string name="text_sms_auth_code_send_success">验证码已发送</string>
    <string name="text_sms_auth_code_send_fail">验证码发送失败</string>
    <string name="text_mobile_phone_is_not_null">手机号码不能为空</string>
    <string name="text_sms_code_is_not_null">验证码不能为空</string>
    <string name="text_logining">正在登录…</string>

    <string name="text_bottom_tab_star">星球</string>
    <string name="text_bottom_tab_plaza">广场</string>
    <string name="text_bottom_tab_chat">聊天</string>
    <string name="text_bottom_tab_me">我的</string>
    <string name="text_meet">遇见</string>
    <string name="text_connecting_server">正在连接服务器...</string>
    <string name="text_random">随机</string>
    <string name="text_soul">灵魂</string>
    <string name="text_fate">缘分</string>
    <string name="text_love">恋爱</string>
    <string name="text_take_photo">拍照</string>
    <string name="text_select_from_album">从相册选择</string>
    <string name="text_cancel">取消</string>
    <string name="text_dialog_hint_1">欢迎来到遇见APP</string>
    <string name="text_dialog_hint_2">听说你是第一次使用</string>
    <string name="text_dialog_hint_3">快来填写资料吧</string>
    <string name="text_done">完成</string>
    <string name="text_upload_photo_title">一张有个性的头像可以吸引人</string>
    <string name="text_upload_nickname_title">一个名字，一个故事</string>
    <string name="text_upload_nickname">昵称</string>
    <string name="text_write_personal_info">填写个人资料</string>
    <string name="text_please_check_camera">未打开相机，请检查相机功能</string>
    <string name="text_uploading_personal_info">正在上传个人资料</string>
    <string name="text_gentle_girl">温婉女孩</string>
    <string name="text_sunshine_boy">阳光男孩</string>
    <string name="text_to_contact">从通讯录导入</string>
    <string name="text_please_input_mobile_phone">请输入电话号码</string>
    <string name="text_error">出错啦~~</string>
    <string name="text_dont_check_user">未查询到用户</string>
    <string name="text_search_result">搜索结果</string>
    <string name="text_recommend_friend">推荐好友</string>
    <string name="text_searching">正在搜索...</string>
    <string name="text_importing">正在导入...</string>
    <string name="text_me_info">个人信息</string>
    <string name="text_new_friend">新朋友</string>
    <string name="text_privacy_setting">隐私设置</string>
    <string name="text_share">分享</string>
    <string name="text_setting">设置</string>
    <string name="text_use_account_password_login">使用账号密码登录</string>
    <string name="text_password">密码</string>
    <string name="text_use_sms_login">使用验证码登录</string>
    <string name="text_account">账号</string>
    <string name="text_account_is_not_null">账号不能为空</string>
    <string name="text_password_is_not_null">密码不能为空</string>
    <string name="text_log_out">退出登录</string>
    <string name="text_exiting">正在退出...</string>
    <string name="text_sending_auth_code">正在发送验证码...</string>
    <string name="text_loading">正在加载...</string>
    <string name="text_add_friend">添加好友</string>
    <string name="text_chat">聊天</string>
    <string name="text_audio_chat">语音聊天</string>
    <string name="text_video_chat">视频聊天</string>
    <string name="text_sex">性别</string>
    <string name="text_age">年龄</string>
    <string name="text_birthday">生日</string>
    <string name="text_constellation">星座</string>
    <string name="text_hobby">爱好</string>
    <string name="text_status">状态</string>
    <string name="text_man">男</string>
    <string name="text_woman">女</string>
    <string name="text_age_suffix">岁</string>
    <string name="text_add_contacts">添加联系人</string>
    <string name="text_confirm">确定</string>
    <string name="text_leave_message">留言..</string>
    <string name="text_sending">正在发送...</string>
</resources>
